# gerbil-space-program

./: Cargo.toml  PERFORMANCE.md  README.md  flake.nix  index.html
.github/workflows/: deploy-page.yaml  release-android-google-play.yaml  release-ios-testflight.yaml  release.yaml
assets/shaders/: background_grid.wgsl  trajectory_compute.wgsl  trajectory_curve.wgsl
mobile/: Cargo.toml  Makefile  manifest.yaml
mobile/mobile.xcodeproj/: project.pbxproj
mobile/src/: lib.rs
src/: astronomy.rs  background_grid.rs  game.rs  game_over.rs  gravity_field.rs  lib.rs  loading.rs  main.rs  maneuver.rs  menu.rs  minimap.rs  pause.rs  relativity.rs  settings.rs  terrain.rs  trajectory_gpu.rs
src/actions/: mod.rs
src/ai/: aggression.rs  mod.rs  plugin.rs  state.rs  systems.rs
src/ship_gen/: mod.rs  model.rs  names.rs  parts.rs  plugin.rs  visuals.rs
src/ui/: bridge.rs  mod.rs
